--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.14.1"
+    "@types/uuid": "^8.0.0",
+    "node-sass": "^4.14.1",
+    "uuid": "^8.2.0"
   }
 }
